[project]
name = "astra-mana"
version = "0.1.0"
description = "Environmental stewardship token demo with PoW and verifiable claims"
readme = "README.md"
authors = [{ name = "Jeff Krakenberg" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=42.0.0"
]

[project.scripts]
astra-mana = "astra_mana.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
